syntax = "proto3";

package com.hcg.identity.grpc.service;
option java_multiple_files = true;

message LoginMessage {
    string email = 1;
    string password = 2;
}

message LoginReply {
    bool success = 1;
    string access_token = 2;
}

service LoginService {
    rpc Login (LoginMessage) returns (LoginReply);
}